apps: more z-index fixes and menu offset tweaks

--- a/apps/keys/style.css
+++ b/apps/keys/style.css
@@ -55,9 +55,9 @@ a.pagemenu:after {
   position: absolute;
   min-width: 150px;
   overflow: auto;
-  top: 42px;  /* font-size=16 + 2 * padding=2 + 2*border=1 */
+  top: 40px;  /* font-size=16 + 2 * padding=2 */
   right:0;
-  z-index: 1;
+  z-index: 101;
 }
 
 .dropdown-content a {
